Updated project images

--- a/src/posts/01-Raido_Code.mdx
+++ b/src/posts/01-Raido_Code.mdx
@@ -6,12 +6,12 @@ year: "2021"
 tags: ["concept", "design", "development"]
 langs: ["html", "css", "js"]
 colab: "group project"
-thumb: "/images/thumb_groenewijken.png"
+thumb: "/images/01-raido_code-thumb.png"
 live: "https://elempiar.github.io/Raido/"
 published: true
 ---
 
-![Raido Code Screenshot](/images/thumb_groenewijken.png)
+![Raido Code Screenshot](/images/01-raido_code.png)
 
 For this project I was solely responsible for the development of the website that we had to deliver. The design was mostly provided by a team member, who worked together with me to get the design ready.
 
