--- a/src/posts/02-Groene_Wijken.mdx
+++ b/src/posts/02-Groene_Wijken.mdx
@@ -13,7 +13,7 @@ published: true
 
 ![Groene Wijken Screenshot](/images/02-groene_wijken.png)
 
-For this project I came up with, and developed the idea of a side-scrolling map that's explorable with the mouse. The drawings were done by an other team member.
+For this project I came up with, and developed the idea of a side-scrolling map that's explorable by cursor. The drawings were done by an other team member.
 
 This website was a really fun challenge for me, since it was my first time doing something less standard with JavaScript.
 
