--- a/src/posts/01-Raido_Code.mdx
+++ b/src/posts/01-Raido_Code.mdx
@@ -15,6 +15,6 @@ published: true
 
 For this project I was solely responsible for the development of the website that we had to deliver. The design was mostly provided by a team member, who worked together with me to get the design ready.
 
-I also brainstormed together with the team to come up with the brand identity and art-style for the workshops. Test.
+I also brainstormed together with the team to come up with the brand identity and art-style for the workshops.
 
 [Github Repo](https://github.com/Elempiar/Raido)
